Fix unit test breakage with Java 17